correct Scaler dict

--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -166,8 +166,10 @@
     "# Target for classification cannot be normalized\n",
     "# The standardization is performed on the original data, not the data from previous standardization\n",
     "# Previous standardization results are overwritten\n",
+    "Data_Standard = False\n",
     "if eval(Name_Dict['Response_Value'])==0:\n",
     "    print('New standardization of observed expression values.')\n",
+    "    Data_Standard = True\n",
     "    SeqTrain, Expr_Scaler = ExpressionScaler(SeqTrain, Name_Dict)\n",
     "    # storing scaler\n",
     "    Scaler_File = os.path.join(Data_Folder, '{}_{}_{}-Scaler.pkl'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor']))\n",
@@ -176,7 +178,7 @@
     "# removing non-informative positions where no base diversity exists, base one hot encoding\n",
     "SeqTrain_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqTrain, Name_Dict, Entropy_cutoff=float(Name_Dict['Entropy_cutoff']))\n",
     "\n",
-    "print('Normalization: {}'.format(Name_Dict['Data_Standard']))"
+    "print('Normalization: {}'.format(Data_Standard))"
    ]
   },
   {
