add correlation FI-vs-feature number

--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_meng40end.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -248,7 +248,8 @@
     "        \n",
     "    run_time = timeit.default_timer() - start_time\n",
     "    print('Training run time: {:.0f} sec'.format(run_time))\n",
-    "\n",
+    "    print('Estimator hyperparameter: ', MyML.best_estimator_.get_params)\n",
+    "    \n",
     "    # getting the best estimator\n",
     "    ML_Best = MyML.best_estimator_\n",
     "\n",
