--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_meng40end.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
@@ -225,6 +225,7 @@
     "\n",
     "for Meas_Idx in range(Measure_Numb): \n",
     "#     fig, axs = plt.subplots(nrows=1, ncols=1)\n",
+    "    print(Y_Col_Name[Meas_Idx])\n",
     "    if Response_Value<2:\n",
     "        # figure of regression plots\n",
     "        plt.scatter(Y_train[:, Meas_Idx], Y_train_pred[:, Meas_Idx], marker='+')\n",
@@ -327,7 +328,7 @@
     "        TopPos, TopNuc = largest_indices(PWM_best.values, 3)\n",
     "        Bases = ['A','C','G','T']\n",
     "        TopNFeat = range(3)\n",
-    "        [print('Importance {}: Position: -{}, Nucleotide: {}'.format(rank+1, PWM_best.shape[0]-TopPos[rank], Bases[TopNuc[rank]])) for rank in TopNFeat]\n",
+    "        [print('Importance {}: Position: -{}, Nucleotide: {}, FI: {:.2f}'.format(rank+1, PWM_best.shape[0]-TopPos[rank], Bases[TopNuc[rank]], PWM_best.values[TopPos[rank],TopNuc[rank]])) for rank in TopNFeat]\n",
     "\n",
     "        nn_logo = lm.Logo(PWM_best)\n",
     "        nn_logo.ax.set_xlabel('Position', fontsize=FigFontSize)\n",
