add comp library analysis, cut libraries

--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_meng40start.txt')\n",
+    "Name_Dict = init_Exp2('config_ecol73_40start.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -222,7 +222,7 @@
    "source": [
     "# For histogram of sequence diversity you can either root the distance to the most common nucleotide on each position or provide an external reference\n",
     "mydist = generate_distances(SeqDat, Name_Dict, Hist_Type=0)\n",
-    "    \n",
+    "print('Average distance: {:.2f}'.format(np.mean(mydist)))\n",
     "# plt.rc('text', usetex=False)\n",
     "plt.hist(mydist*100, bins=18, weights=np.zeros_like(mydist) + 1. / mydist.size) # BG42: [3,6:221]; BG35:[2,222:]\n",
     "plt.xlabel('Sequence distance in %', fontsize=FigFontSize)\n",
