--- a/Protocol/Analysis-CrossLibraries.ipynb
+++ b/Protocol/Analysis-CrossLibraries.ipynb
@@ -25,7 +25,11 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "FType = 'svg'"
+    "FType = 'svg'\n",
+    "\n",
+    "axessize=18\n",
+    "ticksize=14\n",
+    "legendsize=14"
    ]
   },
   {
@@ -93,10 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rc('axes', labelsize=14) \n",
-    "plt.rc('xtick', labelsize=12) \n",
-    "plt.rc('ytick', labelsize=12) \n",
-    "plt.rc('legend', fontsize=14) \n",
+    "plt.rc('axes', labelsize=axessize) \n",
+    "plt.rc('xtick', labelsize=ticksize) \n",
+    "plt.rc('ytick', labelsize=ticksize) \n",
+    "plt.rc('legend', fontsize=legendsize) \n",
     "\n",
     "# plt.scatter(Feat_Num, f1Mean, s=100, marker='X')\n",
     "plt.errorbar(FNum, f1Mean, f1Std, fmt='X', color='b', ecolor='lightblue', elinewidth=5, capsize=0)\n",
@@ -141,10 +145,10 @@
     "PCorr = np.corrcoef(FNum, FImp)[0,1]\n",
     "m,n = np.polyfit(FNum, FImp, 1)\n",
     "\n",
-    "plt.rc('axes', labelsize=14) \n",
-    "plt.rc('xtick', labelsize=12) \n",
-    "plt.rc('ytick', labelsize=12) \n",
-    "plt.rc('legend', fontsize=14) \n",
+    "plt.rc('axes', labelsize=axessize) \n",
+    "plt.rc('xtick', labelsize=ticksize) \n",
+    "plt.rc('ytick', labelsize=ticksize) \n",
+    "plt.rc('legend', fontsize=legendsize) \n",
     "X = np.linspace(np.min(FNum),np.max(FNum),100)\n",
     "\n",
     "plt.plot(X, X*m+n, 'k:')\n",
@@ -163,7 +167,7 @@
     "    plt.text(Tst_FNum[Indx]+tstxshift[Indx], Tst_FImp[Indx]+tstyshift[Indx], Source)\n",
     "\n",
     "plt.xlabel('Feature Number')\n",
-    "plt.ylabel('Sum of Top 3 Feature Importance')\n",
+    "plt.ylabel('Sum of Top 3 FI')\n",
     "R2Legend = 'y={:.3f}x+{:.1f}, R$^2$={:.2f}'.format(m,n,PCorr)\n",
     "# RegrForm = r'$\\sum_{i=0}^\\infty x_i$'\n",
     "plt.legend([R2Legend])\n",
@@ -185,10 +189,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rc('axes', labelsize=14) \n",
-    "plt.rc('xtick', labelsize=12) \n",
-    "plt.rc('ytick', labelsize=12) \n",
-    "plt.rc('legend', fontsize=14) \n",
+    "plt.rc('axes', labelsize=axessize) \n",
+    "plt.rc('xtick', labelsize=ticksize) \n",
+    "plt.rc('ytick', labelsize=ticksize) \n",
+    "plt.rc('legend', fontsize=legendsize) \n",
     "\n",
     "plt.scatter(TrainSet, f1CV, s=100, marker='X')\n",
     "xshift = [-110,50,75,-110,50,50,50]\n",
@@ -232,10 +236,10 @@
     "AvSqDist = mydf[XName][:-mytst].astype(float).values\n",
     "Tst_AvSqDist = mydf[XName][-mytst:].astype(float).values\n",
     "\n",
-    "plt.rc('axes', labelsize=14) \n",
-    "plt.rc('xtick', labelsize=12) \n",
-    "plt.rc('ytick', labelsize=12) \n",
-    "plt.rc('legend', fontsize=14) \n",
+    "plt.rc('axes', labelsize=axessize) \n",
+    "plt.rc('xtick', labelsize=ticksize) \n",
+    "plt.rc('ytick', labelsize=ticksize) \n",
+    "plt.rc('legend', fontsize=legendsize) \n",
     "\n",
     "plt.scatter(AvSqDist, f1CV, s=100, marker='X')\n",
     "xshift = [.01,.01,.01,.01,.01,.01,.01]\n",
@@ -267,15 +271,6 @@
    "metadata": {},
    "source": [
     "## Multivariate linear regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame(X)"
    ]
   },
   {
