--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_ecol73_40start.txt')\n",
+    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -224,7 +224,7 @@
     "mydist = generate_distances(SeqDat, Name_Dict, Hist_Type=0)\n",
     "print('Average distance: {:.2f}'.format(np.mean(mydist)))\n",
     "# plt.rc('text', usetex=False)\n",
-    "plt.hist(mydist*100, bins=18, weights=np.zeros_like(mydist) + 1. / mydist.size) # BG42: [3,6:221]; BG35:[2,222:]\n",
+    "plt.hist(mydist*100, bins=5, weights=np.zeros_like(mydist) + 1. / mydist.size) # BG42: [3,6:221]; BG35:[2,222:]\n",
     "plt.xlabel('Sequence distance in %', fontsize=FigFontSize)\n",
     "plt.ylabel('Frequency', fontsize=FigFontSize)\n",
     "plt.tight_layout()\n",
