mod. figures protocol

--- a/Protocol/Analysis-CrossLibraries.ipynb
+++ b/Protocol/Analysis-CrossLibraries.ipynb
@@ -263,7 +263,10 @@
     "FigName = 'SeqDiv-vs-f1CV.{}'.format(FType)\n",
     "plt.savefig(FigName, bbox_inches='tight', format=FType)\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "print('F1 CoV change d-k: {:.2f}%'.format(Tst_f1CV[2]/f1CV[3]*100))\n",
+    "print('SeqDist change d-k: {:.2f}%'.format(Tst_AvSqDist[2]/AvSqDist[3]*100))\n",
+    "print('SampSize change d-k: {:.2f}%'.format(Tst_TrainSet[2]/TrainSet[3]*100))"
    ]
   },
   {
