--- a/0-Workflow.ipynb
+++ b/0-Workflow.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "*Example: <br>\n",
     "An example file for a promoter library in* Pseudomonas putida *KT2440 is provided.* <br>\n",
-    "Data_File = 'liu_bacillus.csv'\n",
+    "Data_File = 'Example1-Pput.csv'\n",
     "\n",
     "---\n",
     "**Author: Ulf Liebal** <br>\n",
@@ -53,20 +53,20 @@
     "#####################\n",
     "# start User Input\n",
     "# File name of the library, in csv format\n",
-    "# example input: 'Example1-Pput.csv', 'PromLib_EcolPtai.csv'\n",
-    "Data_File = 'mutalik12_Ecol.csv' #'liu_bacillus.csv'  \n",
+    "# example input: 'Example1-Pput.csv'\n",
+    "Data_File = 'Example1-Pput.csv' \n",
     "# Sequence column name\n",
-    "Sequence = 'Short sequence'#'Sequence(5-3)'\n",
+    "Sequence = 'Sequence(5-3)'\n",
     "# column name of expression activity\n",
     "# example input: ['Promoter Activity'], ['Ecol Promoter Activity', 'Ptai Promoter Activity'],\n",
     "# Make sure all entries are within square brackets and hyphens\n",
-    "Y_Col_Name = ['sE o/exp']#['GFP relative activity']\n",
+    "Y_Col_Name = ['GFP relative activity']\n",
     "# Promoter ID column name\n",
     "# 'Strain ID'\n",
-    "ID_Col_Name = 'Promoter'#'Name'\n",
+    "ID_Col_Name = 'Name'\n",
     "# expression unit for plots\n",
     "# example: '$\\mu$M(GFP)/(gCDW*h)' 'GFP intensity'\n",
-    "Expression_Unit = 'Expression'#'GFP Activity'\n",
+    "Expression_Unit = 'GFP Activity'\n",
     "# Response value engineering\n",
     "# The machine learning to the expression can either take place on the original values, standardized values with zero mean and unit variance, or categorized expression values\n",
     "# Response_Value = 0: standardized expression with zero mean and unit variance\n",
