--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -268,7 +268,7 @@
     "# entropy on each position\n",
     "plt.stem(np.arange(-len(PSEntropy),0,1), PSEntropy, basefmt=' ', use_line_collection=True)\n",
     "plt.xlabel('Position', fontsize=FigFontSize)\n",
-    "plt.ylabel('Diversity, bits (max=2)', fontsize=FigFontSize)\n",
+    "plt.ylabel('Diversity, bits', fontsize=FigFontSize)\n",
     "Fig_ID = Name_Dict['Entropy_File']\n",
     "Entropy_File = os.path.join(Data_Folder, '{}_{}_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Fig_ID, Fig_Type))\n",
     "plt.savefig(Entropy_File, bbox_inches='tight', format=Fig_Type)\n",
