--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_ecol73.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature importance for random forest\n",
+    "## Feature importance for tree-based methods\n",
     "### Importance of GC-content for prediction "
    ]
   },
@@ -307,7 +307,7 @@
    "source": [
     "### Sequence logo of nucleotide importance\n",
     "\n",
-    "The feature importance of the random forest regressor, i.e. the y-axis in the Logo-plot, is normalized to sum over all nucleotide-positions to one.\n",
+    "The feature importance of the tree machiene learning methods, i.e. the y-axis in the Logo-plot, is normalized to sum over all nucleotide-positions to one.\n",
     "\n",
     "The logos are generated with [Logomaker](https://logomaker.readthedocs.io/en/latest/)."
    ]
