--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_ecol73.txt')\n",
+    "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
