--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
+    "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
