add maingo optimization

--- a/RegressorTests/Regressor_Feeding.ipynb
+++ b/RegressorTests/Regressor_Feeding.ipynb
@@ -15,6 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def make_Input(SeqLen=17):\n",
     "    import numpy as np\n",
     "    import random \n",
@@ -37,14 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import joblib\n",
+    "minp = np.vstack([make_Input(6) for _ in range(100)])\n",
     "\n",
-    "minp = np.vstack([make_Input(17) for _ in range(100)])\n",
-    "\n",
-    "Regressor_File = 'RFR-StrainB.pkl'\n",
+    "Regressor_File = 'SVR-Regressor-Standard.pkl'\n",
     "myRegr = joblib.load(Regressor_File)\n",
-    "myExpr = myRegr.predict(minp)"
+    "myExpr = myRegr.predict(minp)\n",
+    "\n",
+    "Scaler_File = 'SVR-Scaler.pkl'\n",
+    "myScal = joblib.load(Scaler_File)\n",
+    "Scaler = myScal['Promoter Activity_ML_Scaler']"
    ]
   },
   {
@@ -56,6 +67,23 @@
     "import matplotlib.pyplot as plot\n",
     "%matplotlib inline\n",
     "plot.hist(myExpr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optinp = np.array([0,0,0,1,0,0,0,1,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0])\n",
+    "optmat = np.reshape(optinp,(-1,4))\n",
+    "Bases = np.array(['A','C','G','T'])\n",
+    "OptSeq = list(np.hstack([Bases[vec==1] for vec in optmat]))\n",
+    "GC_content = (OptSeq.count('G')+OptSeq.count('C'))/len(OptSeq)\n",
+    "print('Sequence: {}, GC-content: {:.2f}'.format(OptSeq,GC_content))\n",
+    "optall = np.hstack([optinp,GC_content])\n",
+    "OptExpr_stand = myRegr.predict([optall])\n",
+    "Scaler.inverse_transform(OptExpr_stand)"
    ]
   },
   {
