mod Welchs t-test

--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_Spacer.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -176,7 +176,7 @@
     "Expr_array = np.delete(Expr_array, Positions_removed, axis=0)\n",
     "if eval(Name_Dict['Response_Value']) == 0 and len(Y_Col_Name) == 2:\n",
     "    print('The variance plot identifies the positions on which bases have a statistically divergent effect on activity.')\n",
-    "    print('Only positions are shown that display a significant difference of the mean based on a Student\\'s t-test.')\n",
+    "    print('Only positions are shown that display a significant difference of the mean based on a Welsh\\'s t-test.')\n",
     "    Measure_Name = ['{}_ML'.format(MeasName) for MeasName in Y_Col_Name]\n",
     "    #performing Students t-test for significant differences in the mean value of expression for each base on all positions\n",
     "    AllDat = np.array([SeqDat_Hadj[lookup].values for lookup in Measure_Name])\n",
