--- a/GeneOptim.ipynb
+++ b/GeneOptim.ipynb
@@ -197,7 +197,7 @@
     "# There are lots of settings regarding algorithmic details, subsolvers, and output.\n",
     "# E.g., to disable screen output:\n",
     "myMAiNGO.set_option(\"outstreamVerbosity\", 1)\n",
-    "myMAiNGO.set_option(\"maxTime\", 360)\n",
+    "myMAiNGO.set_option(\"maxTime\", 3600)\n",
     "myMAiNGO.set_option(\"PRE_maxLocalSearches\", 50)\n",
     "\n",
     "# Actually solve the problem\n",
@@ -226,23 +226,11 @@
     "\n",
     "gc_share /= nNukleotides\n",
     "\n",
-    "newstr = np.append(optimalSolutionPoint[:-2],gc_share)\n",
+    "newstr = np.append(optimalSolutionPoint,gc_share)\n",
     "OptExpr_stand = myRegr.predict([newstr])\n",
     "Scaler = myScaler['Ecol Promoter Activity_Scaler']\n",
-    "myResult = Scaler.inverse_transform(OptExpr_stand)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "OptExpr_stand = myRegr.predict([optimalSolutionPoint])\n",
-    "Scaler = myScaler['Ecol Promoter Activity_Scaler']\n",
     "myResult = Scaler.inverse_transform(OptExpr_stand)\n",
-    "\n",
-    "print('result: {}'.format(myResult))"
+    "print(myResult)"
    ]
   }
  ],
