--- a/RegressorTests/Regressor_Feeding.ipynb
+++ b/RegressorTests/Regressor_Feeding.ipynb
@@ -47,15 +47,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "minp = np.vstack([make_Input(6) for _ in range(100)])\n",
+    "minp = np.vstack([make_Input(22) for _ in range(100)])\n",
     "\n",
-    "Regressor_File = 'SVR-Regressor-Standard.pkl'\n",
+    "Regressor_File = '../data-PromLib_EcolPtai/00000000_PromLib_EcolPtai_Ecol-Promoter-Activity_SVR-Regressor.pkl'#'RegressorTests/SVR-Regressor-Standard.pkl'\n",
+    "Scaler_File = '../data-PromLib_EcolPtai/00000000_PromLib_EcolPtai_Ecol-Promoter-Activity_SVR-Params.pkl'#'RegressorTests/SVR-Scaler.pkl'\n",
+    "\n",
+    "# Regressor_File = 'SVR-Regressor-Standard.pkl'\n",
     "myRegr = joblib.load(Regressor_File)\n",
     "myExpr = myRegr.predict(minp)\n",
     "\n",
-    "Scaler_File = 'SVR-Scaler.pkl'\n",
+    "# Scaler_File = 'SVR-Scaler.pkl'\n",
     "myScal = joblib.load(Scaler_File)\n",
-    "Scaler = myScal['Promoter Activity_ML_Scaler']"
+    "Scaler = myScal['Ecol Promoter Activity_Scaler']"
    ]
   },
   {
@@ -75,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optinp = np.array([0,0,0,1,0,0,0,1,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0])\n",
+    "optinp = np.array([0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0])\n",
     "optmat = np.reshape(optinp,(-1,4))\n",
     "Bases = np.array(['A','C','G','T'])\n",
     "OptSeq = list(np.hstack([Bases[vec==1] for vec in optmat]))\n",
