add Sequence opt with GA/MAiNGO

--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -344,6 +344,16 @@
     "else:\n",
     "    print('Nucleotide importance available only for decision tree methods')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ML_Best\n",
+    "# MyML.best_estimator_.get_params"
+   ]
   }
  ],
  "metadata": {
