--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already existent data directory  data-Example1-Pput .\n"
+     ]
+    }
+   ],
    "source": [
     "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
@@ -85,9 +93,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Following outliers were detected: ID: ['BGSPL14g_19_a'], Value: [[50.13234789]]\n",
+      "Original values of expression.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>Strain ID</th>\n",
+       "      <th>Sequence</th>\n",
+       "      <th>Promoter Activity</th>\n",
+       "      <th>Sequence_label-encrypted</th>\n",
+       "      <th>Sequence_letter-encrypted</th>\n",
+       "      <th>GC-content</th>\n",
+       "      <th>Promoter Activity_ML</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
+       "      <td>35.057893</td>\n",
+       "      <td>[2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>0.575</td>\n",
+       "      <td>35.057893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
+       "      <td>33.579982</td>\n",
+       "      <td>[2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>0.575</td>\n",
+       "      <td>33.579982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
+       "      <td>31.523439</td>\n",
+       "      <td>[2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>0.575</td>\n",
+       "      <td>31.523439</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   level_0  index Strain ID  \\\n",
+       "0        0      0     BG14g   \n",
+       "1        1      1     BG14g   \n",
+       "2        2      2     BG14g   \n",
+       "\n",
+       "                                            Sequence  Promoter Activity  \\\n",
+       "0  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...          35.057893   \n",
+       "1  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...          33.579982   \n",
+       "2  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...          31.523439   \n",
+       "\n",
+       "                            Sequence_label-encrypted  \\\n",
+       "0  [2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
+       "1  [2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
+       "2  [2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
+       "\n",
+       "                  Sequence_letter-encrypted  GC-content  Promoter Activity_ML  \n",
+       "0  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.575             35.057893  \n",
+       "1  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.575             33.579982  \n",
+       "2  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.575             31.523439  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SeqDat = Data_Src_Load(Name_Dict)\n",
     "SeqDat.head(3)"
@@ -106,9 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load existing Train-Test split data-Example1-Pput/00000000_Example1-Pput_1_TrainTest-Data.pkl.\n"
+     ]
+    }
+   ],
    "source": [
     "# You can generate a new train-test split or use an existing file. \n",
     "# If the ML_Date is from the current date, it is assumed you generate a new regressor\n",
@@ -158,9 +282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalization: False\n"
+     ]
+    }
+   ],
    "source": [
     "# standardization step, omit for CART approaches by setting variable 'Data_Standard' to 'False'\n",
     "# Target for classification cannot be normalized\n",
@@ -201,9 +333,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting new RF-ML training with Regression for Promoter Activity_ML\n",
+      "Training run time: 15 sec\n",
+      "Estimator hyperparameter:  <bound method BaseEstimator.get_params of RandomForestRegressor(bootstrap=False, ccp_alpha=0.0, criterion='mse',\n",
+      "                      max_depth=2, max_features=22, max_leaf_nodes=None,\n",
+      "                      max_samples=None, min_impurity_decrease=0.0,\n",
+      "                      min_impurity_split=None, min_samples_leaf=3,\n",
+      "                      min_samples_split=3, min_weight_fraction_leaf=0.0,\n",
+      "                      n_estimators=40, n_jobs=None, oob_score=False,\n",
+      "                      random_state=None, verbose=0, warm_start=False)>\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of independent promoter library measurements\n",
     "Regressor_Best = dict()\n",
